force-app/main/default/objects/AH_Transaction_Billing_Template__c/AH_Transaction_Billing_Template__c.object-meta.xml
<CustomObject>
    <description>This object stores the templates used for billing of transaction services.</description>
    <label>AH Transaction Billing Template</label>
    <nameField>
        <displayFormat>TBT-{0000}</displayFormat>
        <label>Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Transaction Billing Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>