force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/CRS_Chain_Code__c.field-meta.xml
<CustomField>
    <fullName>CRS_Chain_Code__c</fullName>
    <description>Chain identifier in the CRS billing data</description>
    <inlineHelpText>Chain identifier in the CRS billing data</inlineHelpText>
    <label>CRS Chain Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IHG</fullName>
            </value>
            <value>
                <fullName>JZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>