force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/CRS_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>CRS_Property_Code__c</fullName>
    <description>Property identifier in the CRS billing data</description>
    <inlineHelpText>Property identifier in the CRS billing data</inlineHelpText>
    <label>CRS Property Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>IHGPROP01</fullName>
            </value>
            <value>
                <fullName>IHGPROP02</fullName>
            </value>
            <value>
                <fullName>IHGPROP03</fullName>
            </value>
            <value>
                <fullName>JZPROP01</fullName>
            </value>
            <value>
                <fullName>JZPROP02</fullName>
            </value>
            <value>
                <fullName>JZPROP03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>