force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/Exclude_CRS_RStay_Status__c.field-meta.xml
<CustomField>
    <fullName>Exclude_CRS_RStay_Status__c</fullName>
    <description>Room Stay Status codes that should be excluded from billable count</description>
    <inlineHelpText>Room Stay Status codes that should be excluded from billable count</inlineHelpText>
    <label>Exclude CRS Room Stay Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NoShow</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>InHouse</fullName>
            </value>
            <value>
                <fullName>CheckedOut</fullName>
            </value>
            <value>
                <fullName>ExternalForceSell</fullName>
            </value>
            <value>
                <fullName>ForceSell</fullName>
            </value>
            <value>
                <fullName>ForceOverbook</fullName>
            </value>
            <value>
                <fullName>RateOverride</fullName>
            </value>
            <value>
                <fullName>ExternalRateOverride</fullName>
            </value>
            <value>
                <fullName>ForceHurdle</fullName>
            </value>
            <value>
                <fullName>NoRecord</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>