force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/Include_CRS_Res_Status__c.field-meta.xml
<CustomField>
    <fullName>Include_CRS_Res_Status__c</fullName>
    <description>Reservation Status codes that should be included in billable count</description>
    <inlineHelpText>Reservation Status codes that should be included in billable count</inlineHelpText>
    <label>Include CRS Reservation Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BK</fullName>
            </value>
            <value>
                <fullName>MY</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>