force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <description>How often the customer is billed</description>
    <inlineHelpText>How often the customer is billed</inlineHelpText>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>