force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product that is billed using this Billing Template</description>
    <inlineHelpText>Product that is billed using this Billing Template</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>AH_Transaction_Billing_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>