force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/Report_Billing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Report_Billing_Contract__c</fullName>
    <description>USED BY SYSTEM TO REFERENCE BILLING CONTRACT NAME IN REPORTS</description>
    <formula>Billing_Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>USED BY SYSTEM TO REFERENCE BILLING CONTRACT NAME IN REPORTS</inlineHelpText>
    <label>Report Billing Contract</label>
    <type>Text</type>
</CustomField>