force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/zzzExclude_CRS_Prop_Code_del__c.field-meta.xml
<CustomField>
    <fullName>zzzExclude_CRS_Prop_Code_del__c</fullName>
    <description>CRS Property Code value(s) excluded by this billing template - leave blank to omit this filter</description>
    <inlineHelpText>CRS Property Code value(s) excluded by this billing template - leave blank to omit this filter</inlineHelpText>
    <label>zzz Exclude CRS Property Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRXXB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>