force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/zzzInclude_CRS_Chain_Code_del__c.field-meta.xml
<CustomField>
    <fullName>zzzInclude_CRS_Chain_Code_del__c</fullName>
    <description>CRS Chain Code value(s) included by this billing template - leave blank to omit this filter</description>
    <inlineHelpText>CRS Chain Code value(s) included by this billing template - leave blank to omit this filter</inlineHelpText>
    <label>zzz Include CRS Chain Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IHG</fullName>
            </value>
            <value>
                <fullName>JZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>