force-app/main/default/objects/AH_Transaction_Billing_Template__c/fields/zzzInclude_CRS_Prop_Code_del__c.field-meta.xml
<CustomField>
    <fullName>zzzInclude_CRS_Prop_Code_del__c</fullName>
    <description>CRS Property Code value(s) included by this billing template - leave blank to omit this filter</description>
    <inlineHelpText>CRS Property Code value(s) included by this billing template - leave blank to omit this filter</inlineHelpText>
    <label>zzz Include CRS Property Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>IHGPROP01</fullName>
            </value>
            <value>
                <fullName>IHGPROP02</fullName>
            </value>
            <value>
                <fullName>IHGPROP03</fullName>
            </value>
            <value>
                <fullName>JZPROP01</fullName>
            </value>
            <value>
                <fullName>JZPROP02</fullName>
            </value>
            <value>
                <fullName>JZPROP03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>