force-app/main/default/objects/AH_Transaction_Billing_Template__c/recordTypes/Amadeus_CRS.recordType-meta.xml
<RecordType>
    <fullName>Amadeus_CRS</fullName>
    <active>true</active>
    <description>Used for Amadeus Central Reservation System</description>
    <label>Amadeus CRS</label>
</RecordType>